feat: forgot and reset password functionality
