# routes/api.php
@@ -1,7 +1,9 @@
 <?php
 
+use App\Http\Controllers\Api\Auth\ForgotPasswordController;
 use App\Http\Controllers\Api\Auth\LoginController;
 use App\Http\Controllers\Api\Auth\LogoutController;
+use App\Http\Controllers\Api\Auth\ResetPasswordController;
 use App\Http\Controllers\Api\BrandController;
 use App\Http\Controllers\Api\CategoryController;
 use App\Http\Controllers\Api\PromotionController;
@@ -12,6 +14,9 @@ use Illuminate\Support\Facades\Route;
 Route::prefix('v1')->group(function () {
     Route::prefix('auth')->group(function () {
         Route::post('/login', LoginController::class);
+        Route::post('/forgot-password', ForgotPasswordController::class);
+        Route::post('/reset-password', ResetPasswordController::class);
+
         Route::post('/logout', LogoutController::class)->middleware(JwtMiddleware::class);
     });
 
